--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.10.11
+# FROM python:3.8.10
 # ------------------------------------------------------------------
 # Close noninteractive
 ENV DEBIAN_FRONTEND noninteractive
